Fixed z-index issue with mobile menu

--- a/src/app/tl-header/tl-header.component.scss
+++ b/src/app/tl-header/tl-header.component.scss
@@ -139,6 +139,10 @@
       }
     }
 
+    .mobile-menu {
+      z-index: 1200;
+    }
+
     .mobile-menu-header {
       display: none;
     }
